Fixed z-index for lobby knocking participant list

--- a/css/premeeting/_lobby.scss
+++ b/css/premeeting/_lobby.scss
@@ -52,7 +52,7 @@
     overflow-y: auto;
     position: fixed;
     top: 30px;
-    z-index: $toolbarZ + 1;
+    z-index: $sideToolbarContainerZ + 1;
 
     &:empty {
         border: none;
